; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/hyperv/extr_netvsc.c_netvsc_teardown_recv_gpadl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/hyperv/extr_netvsc.c_netvsc_teardown_recv_gpadl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hv_device = type { i32 }
%struct.netvsc_device = type { i64 }
%struct.net_device = type { i32 }

@.str = private unnamed_addr constant [43 x i8] c"unable to teardown receive buffer's gpadl\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hv_device*, %struct.netvsc_device*, %struct.net_device*)* @netvsc_teardown_recv_gpadl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @netvsc_teardown_recv_gpadl(%struct.hv_device* %0, %struct.netvsc_device* %1, %struct.net_device* %2) #0 {
  %4 = alloca %struct.hv_device*, align 8
  %5 = alloca %struct.netvsc_device*, align 8
  %6 = alloca %struct.net_device*, align 8
  %7 = alloca i32, align 4
  store %struct.hv_device* %0, %struct.hv_device** %4, align 8
  store %struct.netvsc_device* %1, %struct.netvsc_device** %5, align 8
  store %struct.net_device* %2, %struct.net_device** %6, align 8
  %8 = load %struct.netvsc_device*, %struct.netvsc_device** %5, align 8
  %9 = getelementptr inbounds %struct.netvsc_device, %struct.netvsc_device* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %28

12:                                               ; preds = %3
  %13 = load %struct.hv_device*, %struct.hv_device** %4, align 8
  %14 = getelementptr inbounds %struct.hv_device, %struct.hv_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.netvsc_device*, %struct.netvsc_device** %5, align 8
  %17 = getelementptr inbounds %struct.netvsc_device, %struct.netvsc_device* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @vmbus_teardown_gpadl(i32 %15, i64 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %12
  %23 = load %struct.net_device*, %struct.net_device** %6, align 8
  %24 = call i32 @netdev_err(%struct.net_device* %23, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  br label %28

25:                                               ; preds = %12
  %26 = load %struct.netvsc_device*, %struct.netvsc_device** %5, align 8
  %27 = getelementptr inbounds %struct.netvsc_device, %struct.netvsc_device* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  br label %28

28:                                               ; preds = %22, %25, %3
  ret void
}

declare dso_local i32 @vmbus_teardown_gpadl(i32, i64) #1

declare dso_local i32 @netdev_err(%struct.net_device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
